02_landing-page/style.css
:root {
    --dark-background: #1F2937;
    --button-color: #3882F8;
    --white-grey: #E5E7EB;
    --button-hover-color: #206be4;
    --button-click-color: #1955b4;
}

* {
    margin: 0;
    padding: 0;
}

body {
    font-family: Roboto, system-ui;
}

h1 {
    font-size: 48px;
    font-weight: 900;
    color: #F9FAF8;
}

ul {
    list-style: none;
}

a {
    text-decoration: none;
    color: inherit;
}

/* Section One */

.section-one {
    background-color: var(--dark-background);
    font-size: 18px;
    color: var(--white-grey);
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
    padding: 32px 100px;
}

.header-nav {
    display: flex;
    justify-content: flex-end;
    align-items: baseline;
    margin-bottom: 80px;
}

.logo {
    font-size: 24px;
    margin-right: auto;
}

.nav-right {
    display: flex;
    margin-left: auto;
    flex-grow: 0;
    gap: 16px;
}

.hero-section { 
    display: flex;
}

.hero-text {
    display: flex;
    flex-flow: column wrap;
}

.hero-subtext {
    margin: 0 32px 12px 0;
}


.button-signup {
    background-color: var(--button-color);
    color: #F9FAF8;
    padding: 4px 16px;
    border-radius: 6px;
    border: var(--button-color);
    transition-duration: 0.4s;
    display: flex;
    justify-content: center;
    width: 90px;
}

.button-signup:hover {background-color: var(--button-hover-color);}
.button-signup:active {background-color: var(--button-click-color);}


/* Section Two */

.section-two {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin: 80px;
}

h2 {
    font-size: 36px;
    font-weight: 900;
    color: (var(--dark-background));
}

.subsections {
    display: flex;
    justify-content: center;
    margin-top: 32px;
}
.segment {
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
    align-items: center;
    flex: 1;
    min-width: 200px;
    max-width: 250px;
    
}

.box {
    width: 150px;
    height: 150px;
    border: 4px solid var(--button-color);
    border-radius: 12px;
    box-sizing: border-box;
    margin: 8px;
    padding: 8px;
}

.text {
    display: flex;
    justify-content: center;
    align-content: center;
    flex-wrap: wrap;
}

/* Section Three */

.section-three {
    background-color: #E5E7EB;
    padding: 100px;
    display: flex;
    flex-direction: column;
}

.box-text {
    padding-right: 100px;
}

.quote {
    font-size: 32px;
    font-weight: 300;
    font-style: italic;
}

.quote-from {
    font-weight: bold;
    text-align: right;
}

